# gamecode-mcp2

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  compare_streaming.sh  test_chat_vs_generate.py  test_magistral.sh  test_no_limit.sh  test_ollama.sh  test_ollama_direct.py  test_ollama_options.sh  test_prompt.py  test_streaming.sh
.github/workflows/: release.yml
example-configs/: DIAGRAMMING.md  PATTERNS.md  README.md  setup.sh
example-configs/claude-code-only/: README.md
example-configs/claude-code-only/slack-bot/: .env.example  README.md  example-tools.yaml  requirements.txt  slack_claude_bot.py
example-configs/claude-code-only/slack-bot/examples/: manifest.yml
example-configs/claude-code-only/teams-bot/: README.md  teams_bot_simple.py
example-configs/diagrams/plantuml/: source-only.yaml
example-configs/tools/: README.md  diagrams.yaml  git.yaml  paranoid.yaml
example-configs/tools/languages/: python.yaml  rust.yaml
example-configs/tools/profiles/: python-dev.yaml
examples/: README.md  chat_integration_example.rs  instrumentation_demo.rs  mcp_host_advanced.rs  mcp_host_basic.rs  mcp_host_debug_test.rs  mcp_host_example_tools.yaml  mcp_host_interactive.rs  mcp_host_quick_test.rs  mcp_host_simple_test.rs  minimal_streaming.rs  passthrough_mode.rs  placeholder_mode.rs  streaming_chat_app.rs  test_multi_tool.rs  test_ollama_direct.rs
examples/claude-code-only/slack-bot/: .env.example  Dockerfile  README.md  debug_env.py  debug_path.py  docker-compose.yaml  k8s-deployment.yaml  kill_bot.sh  manifest.json  run_bot.sh  setup_sandbox.sh  slack-bot-tools.yaml  slack_claude_bot.py  test_claude_cmd.py
examples/claude-code-only/teams-bot/: .env.example  teams_bot_simple.py  teams_claude_bot_polling.py
examples/diagrams/: README.md
examples/specialized/: README.md
examples/tools/: core.yaml  secured.yaml  simple-diagrams.yaml
examples/tools/profiles/: rust-dev.yaml
mcp-client/: Cargo.toml
mcp-client/src/: lib.rs  protocol.rs  transport.rs
mcp-host/: CLAUDE.md  Cargo.toml  README.md
mcp-host/docs/: implementation-diagram.md  streaming-architecture.md
mcp-host/examples/: advanced_usage.rs  basic_usage.rs
mcp-host/src/: chat_integration.rs  instrumentation.rs  lib.rs  lib_streaming.rs  lib_v2.rs  streaming_design.rs  streaming_interceptor.rs
mcp-host/src/conversation/: mod.rs
mcp-host/src/llm/: mod.rs  ollama.rs
mcp-host/src/prompts/: mod.rs
mcp-host/src/retry/: mod.rs
mcp-host/tests/mocks/: mod.rs
mcp-server/: Cargo.toml  README.md
mcp-server/examples/: multi-tenant-example.yaml
mcp-server/src/: handlers.rs  lib.rs  main.rs  protocol.rs  tools.rs  validation.rs
mcp-server/tests/: README.md  protocol_tests.rs  security_tests.rs  tool_execution_tests.rs  tool_loading_tests.rs  validation_tests.rs
mcp-server/tests/fixtures/: invalid_tools.yaml  test_tools.yaml  tools_with_include.yaml
tests/: integration_test.rs
