[workspace]
members = ["mcp-server", "mcp-client"]
resolver = "2"

[workspace.package]
version = "0.5.3"
edition = "2024"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"
repository = "https://github.com/navicore/gamecode-mcp2"
description = "Minimal, auditable Model Context Protocol server for safe LLM-to-system interaction"
keywords = ["mcp", "llm", "security", "minimal", "auditable"]
categories = ["command-line-interface", "development-tools"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"