[package]
name = "gamecode-mcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false  # Internal testing library, not for crates.io

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true