[package]
name = "gamecode-mcp-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema validation
jsonschema = "0.26"

# Pattern matching
regex = "1.11"

# Random for retry jitter
rand = "0.8"

# MCP client dependency (internal)
gamecode-mcp-client = { path = "../mcp-client" }

[dev-dependencies]
mockito = "1.6"