[package]
name = "gamecode-mcp-host"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Async stream processing
futures = "0.3"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Pattern matching
regex = "1.11"

# Time handling
chrono = "0.4"

# MCP client dependency (internal)
gamecode-mcp-client = { path = "../mcp-client" }

[dev-dependencies]
mockito = "1.6"

[[example]]
name = "streaming_chat_app"
path = "../examples/streaming_chat_app.rs"

[[example]]
name = "minimal_streaming"
path = "../examples/minimal_streaming.rs"

[[example]]
name = "passthrough_mode"
path = "../examples/passthrough_mode.rs"

[[example]]
name = "placeholder_mode"
path = "../examples/placeholder_mode.rs"

[[example]]
name = "instrumentation_demo"
path = "../examples/instrumentation_demo.rs"