[package]
name = "gamecode-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[[bin]]
name = "gamecode-mcp2"
path = "src/main.rs"

[[example]]
name = "mcp_host_basic"
path = "../examples/mcp_host_basic.rs"

[[example]]
name = "mcp_host_advanced"
path = "../examples/mcp_host_advanced.rs"

[[example]]
name = "mcp_host_simple_test"
path = "../examples/mcp_host_simple_test.rs"

[[example]]
name = "mcp_host_debug_test"
path = "../examples/mcp_host_debug_test.rs"

[[example]]
name = "test_multi_tool"
path = "../examples/test_multi_tool.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde_yaml = "0.9"
directories = "6.0"
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tempfile = "3.8"
gamecode-mcp-host = { path = "../mcp-host" }
gamecode-mcp-client = { path = "../mcp-client" }